--- a/index.html
+++ b/index.html
@@ -162,9 +162,8 @@ function placeTetromino() {
 
 // restart game
 function restartGame() {
-  // 초기화 코드 추가
   gameOver = false;
-  startTime = performance.now(); // 게임 시작 시간 설정
+  startTime = performance.now();
   tetrominoSequence.length = 0;
   for (let row = -2; row < 20; row++) {
     for (let col = 0; col < 10; col++) {
@@ -180,7 +179,7 @@ function restartGame() {
   score = 0;
   tetromino = getNextTetromino();
   nextTetromino = getNextTetromino();
-  rAF = null;  // keep track of the animation frame so we can cancel it
+  rAF = null;
   gameOver = false;
   isPaused = false;
   isAnimating = true;
@@ -197,31 +196,24 @@ function showGameOver() {
 
   context.fillStyle = 'black';
   context.globalAlpha = 0.75;
-  context.fillRect(0, canvas.height / 2 - 30 - 50, canvas.width, 60);
+  context.fillRect(0, 0, canvas.width, 640);
 
   context.globalAlpha = 1;
   context.fillStyle = 'white';
-  context.font = '36px monospace';
+  context.font = '25px monospace';
   context.textAlign = 'center';
   context.textBaseline = 'middle';
   context.fillText('GAME OVER!', canvas.width / 2, canvas.height / 2 - 50);
+  context.fillText('SCORE: ' + score, canvas.width / 2, canvas.height / 2);
+  context.fillText('TIME: ' + time, canvas.width / 2, canvas.height / 2 + 50);
 
-  context.fillStyle = 'black';
-  context.globalAlpha = 0.75;
-  context.fillRect(0, canvas.height / 2 - 30 + 50, canvas.width, 60);
 
-  context.globalAlpha = 1;
-  context.fillStyle = 'white';
-  context.font = '36px monospace';
-  context.textAlign = 'center';
-  context.textBaseline = 'middle';
-  context.fillText('SCORE: ' + score, canvas.width / 2, canvas.height / 2 + 50);
+  context.fillText('Press R to Restart', canvas.width / 2, canvas.height - 80);
 
-  // 스페이스바를 눌렀을 때 다시 시작하도록 이벤트 핸들러 추가
   document.addEventListener('keydown', function(e) {
-    if (e.which === 82) { // 스페이스바 키를 누르면
-      restartGame(); // 게임 다시 시작
-      document.removeEventListener('keydown', arguments.callee); // 이벤트 핸들러 제거
+    if (e.which === 82) {
+      restartGame();
+      document.removeEventListener('keydown', arguments.callee);
     }
   });
 }
@@ -238,11 +230,10 @@ function showMenu(){
   context.textBaseline = 'middle';
   context.fillText('Press Enter to start', canvas.width / 2, canvas.height / 2);
 
-  // 엔터 눌렀을 때 다시 시작하도록 이벤트 핸들러 추가
   document.addEventListener('keydown', function(e) {
-    if (e.which === 13) { // 엔터 키를 누르면
-      restartGame(); // 게임 다시 시작
-      document.removeEventListener('keydown', arguments.callee); // 이벤트 핸들러 제거
+    if (e.which === 13) {
+      restartGame();
+      document.removeEventListener('keydown', arguments.callee);
     }
   });
 }
@@ -251,7 +242,7 @@ function showMenu(){
 function pauseGame(){
   if (isAnimating) {
     cancelAnimationFrame(rAF);
-    isAnimating = false; // 애니메이션 중지
+    isAnimating = false;
 
     context.fillStyle = 'black';
     context.globalAlpha = 0.75;
@@ -292,7 +283,7 @@ function pauseGame(){
 // game 재개
 function resumeGame() {
   if (!isAnimating) {
-    isAnimating = true; // 애니메이션 다시 시작
+    isAnimating = true;
     rAF = requestAnimationFrame(loop);
     // 추가적인 재개 관련 작업 수행
   }
@@ -375,7 +366,7 @@ let nextTetromino = getNextTetromino();
 let rAF = null;  // keep track of the animation frame so we can cancel it
 let gameOver = false;
 let isPaused = false;
-let isAnimating = true;
+let isAnimating = false;
 let isGameStart = false;
 let socre = 0;
 let startTime = 0;
