[Chore] socre -> score

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ let gameOver = false;
 let isPaused = false;
 let isAnimating = false;
 let isGameStart = false;
-let socre = 0;
+let score = 0;
 let startTime = 0;
 let time = 0;
 
